# dronov_book_listing_probe

./: .gitignore  pyproject.toml
samplesete/: manage.py
samplesete/bboard/: admin.py  forms.py  models.py  urls.py  views.py
samplesete/bboard/migrations/: 0001_initial.py  0001_squashed_0005_alter_bb_kind.py  0002_alter_bb_options_alter_bb_content_alter_bb_price_and_more.py  0003_rubric_alter_bb_options_bb_rubric.py  0004_bb_kind.py  0005_alter_bb_kind.py
samplesete/bboard/static/bboard/: style.css
samplesete/bboard/templates/bboard/: bb_create.html  by_rubric.html  index.html
samplesete/bboard/templates/layout/: basic.html
samplesete/samplesete/: asgi.py  settings.py  urls.py  wsgi.py
